syntax = "proto3";

package messages;

service MessageService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
}

message AddUserRequest {
  string _id = 1;
  string username = 2;
  string email = 3;
}

message AddUserResponse {
  bool  success = 1;
  string message = 2;
}
