syntax = "proto3";

package users;

service UserService {
  rpc SignUpUser(SignUpUserRequest) returns (SignUpUserResponse);
}

message SignUpUserRequest {
  string _id = 1;
  string username = 2;
  string email = 3;
}

message SignUpUserResponse {
  bool  success = 1;
  string message = 2;
}
